--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div class="p-3">
           <h5>User</h5>
           <ul>
-            <li><a href="">Profile</a></li>
-            <li><a href="">Update Profile</a></li>
+            <li><a href="profile.html">Profile</a></li>
+            <li><a href="update profile.html">Update Profile</a></li>
           </ul>
 
           <h5>Event</h5>
