--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a
             class="nav-link active link-primary fw-bold px-3"
             aria-current="page"
-            href=""
+            href="Event.html"
             >Event&Tickts</a
           >
           <a class="nav-link px-3" href="">Contact</a>
