--- a/Event.html
+++ b/Event.html
@@ -22,7 +22,7 @@
             <div>
                 <div class="navbar-nav px-3">
                     <a class="nav-link active link-primary fw-bold px-3" href="">Events & Tickets</a>
-                    <a class="nav-link px-3" href="">Contact</a>
+                    <a class="nav-link px-3" href="contact.html">Contact</a>
                     <button type="button" class="btn btn-success">
                         <span id="iconText" class="d-none d-sm-inline">Login</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
@@ -42,7 +42,7 @@
                     <h5>User</h5>
                     <ul>
                         <li><a href="profile.html">Profile</a></li>
-                        <li><a href="update_profile.html">Update Profile</a></li>
+                        <li><a href="update profile.html">Update Profile</a></li>
                     </ul>
                     <h5>Event</h5>
                     <ul>
@@ -130,6 +130,10 @@
                         <p class="mb-1">Stadium: Stadium C</p>
                         <a href="#" class="btn btn-primary">Buy Tickets</a>
                     </div>
+                </div>
+
+                <div class="mt-4">
+                    <a href="index.html" class="btn btn-secondary">Return to Home</a>
                 </div>
             </div>
         </div>
