--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             href="Event.html"
             >Event&Tickts</a
           >
-          <a class="nav-link px-3" href="">Contact</a>
+          <a class="nav-link px-3" href="contact.html">Contact</a>
 
           <div>
             <button type="button" class="btn btn-success">
