--- a/update profile.html
+++ b/update profile.html
@@ -21,8 +21,8 @@
       </div>
       <div>
         <div class="navbar-nav px-3">
-          <a class="nav-link active link-primary fw-bold px-3" href="#">Event & Tickets</a>
-          <a class="nav-link px-3" href="#">Contact</a>
+          <a class="nav-link active link-primary fw-bold px-3" href="Event.html">Event & Tickets</a>
+          <a class="nav-link px-3" href="contact.html">Contact</a>
           <button type="button" class="btn btn-success">
             <span id="iconText" class="d-none d-sm-inline">Login</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
