--- a/update profile.html
+++ b/update profile.html
@@ -21,7 +21,7 @@
       </div>
       <div>
         <div class="navbar-nav px-3">
-          <a class="nav-link active link-primary fw-bold px-3" href="Event.html">Event & Tickets</a>
+          <a class="nav-link active link-primary fw-bold px-3" href="index.html">Event & Tickets</a>
           <a class="nav-link px-3" href="contact.html">Contact</a>
           <button type="button" class="btn btn-success">
             <span id="iconText" class="d-none d-sm-inline">Login</span>
