--- a/index.html
+++ b/index.html
@@ -1,99 +1,170 @@
 <!DOCTYPE html>
+<html lang="en">
 
 <head>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-    crossorigin="anonymous"
-  />
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"
-  ></script>
-  <title>Slay Football</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <title>Events and Tickets</title>
+    <style>
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 
 <body class="bg-body-tertiary">
-  <nav
-    class="navbar navbar-expand bg-body-tertiary justify-content-between align-items-center"
-  >
-    <div class="container">
-      <div class="px-3">
-        <img
-          src="assets/Logo.png"
-          alt="SlayFootball"
-          title="SlayFootball"
-          style="width: 80px"
-        />
-      </div>
-      <div>
-        <div class="navbar-nav px-3">
-          <a
-            class="nav-link active link-primary fw-bold px-3"
-            aria-current="page"
-            href="Event.html"
-            >Event&Tickts</a
-          >
-          <a class="nav-link px-3" href="contact.html">Contact</a>
-
-          <div>
-            <button type="button" class="btn btn-success">
-              <span id="iconText" class="d-none d-sm-inline">Login</span>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="25"
-                height="25"
-                fill="currentColor"
-                class="bi bi-person-circle"
-                viewBox="0 0 16 16"
-              >
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                <path
-                  fill-rule="evenodd"
-                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"
-                />
-              </svg>
-            </button>
-          </div>
+    <nav class="navbar navbar-expand bg-body-tertiary justify-content-between align-items-center">
+        <div class="container">
+            <div class="px-3">
+                <img src="assets/Logo.png" alt="SlayFootball" title="SlayFootball" style="width: 80px" />
+            </div>
+            <div>
+                <div class="navbar-nav px-3">
+                    <a class="nav-link active link-primary fw-bold px-3" href="">Events & Tickets</a>
+                    <a class="nav-link px-3" href="contact.html">Contact</a>
+                    <button type="button" class="btn btn-success">
+                        <span id="iconText" class="d-none d-sm-inline">Login</span>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                            <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                            <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                        </svg>
+                    </button>
+                </div>
+            </div>
         </div>
-      </div>
-    </div>
-  </nav>
-  <div class="container py-3">
-    <div class="row">
-      <div class="col-md-3 bg-white border border-dark-subtle rounded-4">
-        <div class="p-3">
-          <h5>User</h5>
-          <ul>
-            <li><a href="profile.html">Profile</a></li>
-            <li><a href="update profile.html">Update Profile</a></li>
-          </ul>
+    </nav>
 
-          <h5>Event</h5>
-          <ul>
-            <li><a href="">Ticket History</a></li>
-          </ul>
+    <div class="container py-3">
+        <div class="row">
+            <div class="col-md-3 bg-white border border-dark-subtle rounded-4">
+                <div class="p-3">
+                    <h5>User</h5>
+                    <ul>
+                        <li><a href="profile.html">Profile</a></li>
+                        <li><a href="update profile.html">Update Profile</a></li>
+                    </ul>
+                    <h5>Event</h5>
+                    <ul>
+                        <li><a href="">Ticket History</a></li>
+                    </ul>
+                    <h5>Admin</h5>
+                    <ul>
+                        <li><a href="">User Management</a></li>
+                        <li><a href="">Event Management</a></li>
+                        <li><a href="">Seat Management</a></li>
+                    </ul>
+                </div>
+            </div>
 
-          <h5>Admin</h5>
-          <ul>
-            <li><a href="">User Management</a></li>
-            <li><a href="">Event Management</a></li>
-            <li><a href="">Seat Management</a></li>
-          </ul>
+            <div class="col-md-9">
+              <img src="assets/football.png" alt="SlayFootball" title="SlayFootball" style="width: 1000px" />
+            </div>
+                <h3 class="mb-3">Upcoming Events</h3>
+                <div class="mb-3">
+                    <label for="stadiumFilter" class="form-label">Filter by Stadium:</label>
+                    <select class="form-select" id="stadiumFilter">
+                        <option value="all" selected>All Stadiums</option>
+                        <option value="Stadium A">Stadium A</option>
+                        <option value="Stadium B">Stadium B</option>
+                        <option value="Stadium C">Stadium C</option>
+                    </select>
+                </div>
+
+                <div class="list-group" id="eventList">
+                    <div class="list-group-item stadium-A">
+                        <h5 class="mb-1">Match 1: Team A vs Team B</h5>
+                        <p class="mb-1">Date: 2024-11-15</p>
+                        <p class="mb-1">Stadium: Stadium A</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-B">
+                        <h5 class="mb-1">Match 2: Team C vs Team D</h5>
+                        <p class="mb-1">Date: 2024-11-20</p>
+                        <p class="mb-1">Stadium: Stadium B</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-A">
+                        <h5 class="mb-1">Match 3: Team E vs Team F</h5>
+                        <p class="mb-1">Date: 2024-11-25</p>
+                        <p class="mb-1">Stadium: Stadium A</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-C">
+                        <h5 class="mb-1">Match 4: Team G vs Team H</h5>
+                        <p class="mb-1">Date: 2024-11-30</p>
+                        <p class="mb-1">Stadium: Stadium C</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-B">
+                        <h5 class="mb-1">Match 5: Team I vs Team J</h5>
+                        <p class="mb-1">Date: 2024-12-05</p>
+                        <p class="mb-1">Stadium: Stadium B</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-A">
+                        <h5 class="mb-1">Match 6: Team K vs Team L</h5>
+                        <p class="mb-1">Date: 2024-12-10</p>
+                        <p class="mb-1">Stadium: Stadium A</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-C">
+                        <h5 class="mb-1">Match 7: Team M vs Team N</h5>
+                        <p class="mb-1">Date: 2024-12-15</p>
+                        <p class="mb-1">Stadium: Stadium C</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-B">
+                        <h5 class="mb-1">Match 8: Team O vs Team P</h5>
+                        <p class="mb-1">Date: 2024-12-20</p>
+                        <p class="mb-1">Stadium: Stadium B</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-A">
+                        <h5 class="mb-1">Match 9: Team Q vs Team R</h5>
+                        <p class="mb-1">Date: 2024-12-25</p>
+                        <p class="mb-1">Stadium: Stadium A</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                    <div class="list-group-item stadium-C">
+                        <h5 class="mb-1">Match 10: Team S vs Team T</h5>
+                        <p class="mb-1">Date: 2024-12-30</p>
+                        <p class="mb-1">Stadium: Stadium C</p>
+                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                    </div>
+                </div>
+
+                
+            </div>
         </div>
-      </div>
-
-      <div class="col-md-9">Content blabla</div>
     </div>
-  </div>
-  <footer class="bg-dark text-white text-center fixed-bottom">
-    ©Slay Football- EIE4432 Group Project
-  </footer>
+
+    <footer class="bg-dark text-white text-center fixed-bottom">
+        ©Slay Football - EIE4432 Group Project
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        const stadiumFilter = document.getElementById('stadiumFilter');
+        const eventList = document.getElementById('eventList');
+        const events = eventList.getElementsByClassName('list-group-item');
+
+        stadiumFilter.addEventListener('change', function () {
+            const selectedStadium = this.value;
+
+            for (let i = 0; i < events.length; i++) {
+                const eventStadium = events[i].textContent.includes('Stadium A') ? 'Stadium A' :
+                                     events[i].textContent.includes('Stadium B') ? 'Stadium B' :
+                                     events[i].textContent.includes('Stadium C') ? 'Stadium C' : '';
+
+                if (selectedStadium === 'all' || eventStadium === selectedStadium) {
+                    events[i].classList.remove('hidden');
+                } else {
+                    events[i].classList.add('hidden');
+                }
+            }
+        });
+    </script>
 </body>
+
+</html>
