--- a/ticket history.html
+++ b/ticket history.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-    <title>Contact Us</title>
+    <title>Ticket History</title>
     <style>
-        .contact-section {
+        .ticket-section {
             margin-top: 50px;
         }
     </style>
@@ -23,51 +23,39 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="Event.html">Events & Tickets</a>
+                        <a class="nav-link" href="index.html">Events & Tickets</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="contact.html">Contact</a>
+                        <a class="nav-link active" href="ticket_history.html">Ticket History</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <div class="container contact-section">
-        <h2 class="text-center mb-4">Contact Us</h2>
-
-        <!-- Phone Contact Section -->
-        <div class="mb-3">
-            <div class="card">
-                <div class="card-header bg-primary text-white">
-                    <h5 class="mb-0">Phone Contact</h5>
-                </div>
-                <div class="card-body">
-                    <p>If you have any questions, feel free to contact us via phone:</p>
-                    <p><strong>Phone Number:</strong> <a href="tel:+1234567890" class="text-primary">+852 68787077</a></p>
-                    <p>Our team is available from 9 AM to 5 PM (Monday to Friday).</p>
-                </div>
+    <div class="container ticket-section">
+        <h2 class="text-center mb-4">Your Ticket History</h2>
+        
+        <div class="list-group">
+            <div class="list-group-item">
+                <h5 class="mb-1">Match: Team A vs Team B</h5>
+                <p class="mb-1">Date: 2024-11-15</p>
+                <p class="mb-1">Stadium: Stadium A</p>
+                <p class="mb-1">Tickets Purchased: 2</p>
+                <p class="mb-1">Total Price: $50.00</p>
+                <a href="#" class="btn btn-secondary btn-sm">View Details</a>
             </div>
-        </div>
-
-        <!-- Email Contact Section -->
-        <div class="mb-3">
-            <div class="card">
-                <div class="card-header bg-success text-white">
-                    <h5 class="mb-0">Email Contact</h5>
-                </div>
-                <div class="card-body">
-                    <p>You can also reach us via email:</p>
-                    <p><strong>Email Address:</strong> <a href="mailto:info@slayfootball.com" class="text-success">info@slayfootball.com</a></p>
-                    <p>We aim to respond to all inquiries within 24 hours.</p>
-                </div>
-            </div>
+            
         </div>
     </div>
 
     <footer class="bg-dark text-white text-center fixed-bottom">
         ©Slay Football - EIE4432 Group Project
       </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 
