--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </ul>
                     <h5>Event</h5>
                     <ul>
-                        <li><a href="">Ticket History</a></li>
+                        <li><a href="ticket history.html">Ticket History</a></li>
                     </ul>
                     <h5>Admin</h5>
                     <ul>
@@ -73,10 +73,10 @@
 
                 <div class="list-group" id="eventList">
                     <div class="list-group-item stadium-A">
-                        <h5 class="mb-1">Match 1: Team A vs Team B</h5>
+                        <h5 class="mb-1">SK Slovan Bratislava vs GNK Dinamo Zagreb</h5>
                         <p class="mb-1">Date: 2024-11-15</p>
-                        <p class="mb-1">Stadium: Stadium A</p>
-                        <a href="#" class="btn btn-primary">Buy Tickets</a>
+                        <p class="mb-1">Stadium:  Tehelné Pole Football Stadium</p>
+                        <a href="buy.html" class="btn btn-primary">Buy Tickets</a>
                     </div>
                     <div class="list-group-item stadium-B">
                         <h5 class="mb-1">Match 2: Team C vs Team D</h5>
