--- a/buy.html
+++ b/buy.html
@@ -61,7 +61,7 @@
         <div class="col-md-5">
           <img
             src="assets/football match1.png"
-            alt=" Tehelné Pole Football Stadium"
+            alt="match1"
             class="img-fluid"
           />
           <h5 class="mt-3">Match Details</h5>
@@ -115,7 +115,7 @@
           <div class="text-center">
             <img
               src="assets/CourtMap.png"
-              alt="Philips Stadion"
+              alt="courtMap"
               class="img-fluid"
               style="max-width: 500px; width: 70%"
             />
