--- a/index.html
+++ b/index.html
@@ -96,24 +96,27 @@
                         <option value="Stadium C">Stadium C</option>
                     </select>
                 </div>
-
+                
                 <div class="list-group" id="eventList">
                     <div class="list-group-item stadium-A">
-                        <div class=" row align-items-center">
-                        <div class="col-md-8">
-                            <h5 class="mb-1">SK Slovan Bratislava vs GNK Dinamo Zagreb</h5>
+                        <div class="row align-items-center">
+                          <div class="col-md-8">
+                            <h5 class="mb-1">
+                              SK Slovan Bratislava vs GNK Dinamo Zagreb
+                            </h5>
                             <p class="mb-1">Date: 2024-11-15</p>
                             <p class="mb-1">Stadium: Tehelné Pole Football Stadium</p>
                             <a href="buy.html" class="btn btn-primary">Buy Tickets</a>
-                        </div>
-                        <div class="col-md-4">
+                          </div>
+                          <div class="col-md-4">
                             <img
-                                src="assets/football match1.png"
-                                alt="Tehelné Pole Football Stadium"
-                                class="img-fluid rounded-4"
+                              src="assets/football match1.png"
+                              alt="match1"
+                              class="img-fluid rounded-4"
                             />
+                          </div>
                         </div>
-                    </div>
+                      </div>
                     <div class="list-group-item stadium-B">
                         <h5 class="mb-1">Match 2: Team C vs Team D</h5>
                         <p class="mb-1">Date: 2024-11-20</p>
