--- a/admin-userManagement.html
+++ b/admin-userManagement.html
@@ -40,7 +40,7 @@
       </div>
     </nav>
 
-    <div class="container contact-section">
+    <div class="container">
       <h2 class="text-center mb-4">Users</h2>
       <p>Import and map information of users from database</p>
     </div>
