--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                 <div class="navbar-nav px-3">
                     <a class="nav-link active link-primary fw-bold px-3" href="">Events & Tickets</a>
                     <a class="nav-link px-3" href="./contact.html">Contact</a>
-                    <button type="button" class="btn btn-success">
+                    <a type="button" class="btn btn-success" href="./auth-login.html">
                         <span id="iconText" class="d-none d-sm-inline">Login</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
                         </svg>
-                    </button>
+                    </a>
                 </div>
             </div>
         </div>
