--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <div class="p-3">
                     <h5>&#x26BD; User</h5>
                     <ul>
-                        <li><a href="./profile.html">Profile</a></li>
-                        <li><a href="./updateProfile.html">Update Profile</a></li>
+                        <li><a href="./user-displayProfile.html">Profile</a></li>
+                        <li><a href="./user-updateProfile.html">Update Profile</a></li>
                     </ul>
                     <h5>&#x26BD; Event</h5>
                     <ul>
