--- a/user-updateProfile.html
+++ b/user-updateProfile.html
@@ -56,7 +56,7 @@
     </nav>
 
     <div class="container py-3">
-      <h2>User Profile</h2>
+      <h2>Update Profile</h2>
       <form>
         <div class="mb-3">
           <label for="username" class="form-label">Username</label>
@@ -98,21 +98,15 @@
             placeholder="Confirm new password"
           />
         </div>
-        <button type="submit" class="btn btn-primary">Save Changes</button>
+        <div class="d-flex gap-3">
+          <button type="submit" class="btn btn-primary">Save Changes</button>
+          <a href="./index.html" class="btn btn-secondary">Back to Home</a>
+        </div>
       </form>
-      <div class="mt-3">
-        <a href="index.html" class="btn btn-secondary">Back to Home</a>
-      </div>
     </div>
 
     <footer class="bg-dark text-white text-center fixed-bottom">
       ©Slay Football - EIE4432 Group Project
     </footer>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
