--- a/static/admin-addEvent.html
+++ b/static/admin-addEvent.html
@@ -7,8 +7,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <title>User Management</title>
   </head>
 
@@ -23,8 +22,7 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -52,12 +50,7 @@
             </div>
             <div class="mb-3">
               <label for="description" class="form-label">Description:</label>
-              <input
-                type="text"
-                class="form-control"
-                id="description"
-                required
-              />
+              <input type="text" class="form-control" id="description" required />
             </div>
           </div>
           <div class="col-4 text-center">
@@ -65,19 +58,12 @@
               src="assets/ImgPlaceholder.png"
               alt="coverImage"
               class="img-fluid"
-              style="max-width: 500px; width: 70%"
-            />
+              style="max-width: 500px; width: 70%" />
           </div>
         </div>
         <div class="mb-3">
           <label for="eventTime" class="form-label">Event date and time:</label>
-          <input
-            type="datetime-local"
-            id="eventTime"
-            name="eventTime"
-            class="form-control"
-            required
-          />
+          <input type="datetime-local" id="eventTime" name="eventTime" class="form-control" required />
         </div>
         <div class="mb-3">
           <label for="venue" class="form-label">Venue:</label>
@@ -90,20 +76,15 @@
         <div class="d-flex gap-3">
           <button type="submit" class="btn btn-primary">Create</button>
 
-          <a href="./admin-eventManagement.html" class="btn btn-secondary"
-            >Back to Event List</a
-          >
+          <a href="./admin-eventManagement.html" class="btn btn-secondary">Back to Event List</a>
         </div>
       </form>
     </div>
 
-    <footer class="bg-dark text-white text-center fixed-bottom">
-      ©Slay Football - EIE4432 Group Project
-    </footer>
+    <footer class="bg-dark text-white text-center fixed-bottom">©Slay Football - EIE4432 Group Project</footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
