--- a/static/auth-login.html
+++ b/static/auth-login.html
@@ -7,31 +7,24 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"></script>
+    <script src="./js/login.js"></script>
     <title>Login</title>
   </head>
 
   <body class="bg-body-tertiary">
-    <nav
-      class="navbar navbar-expand bg-body-tertiary justify-content-between align-items-center"
-    >
+    <nav class="navbar navbar-expand bg-body-tertiary justify-content-between align-items-center">
       <div class="container">
         <div class="px-3">
-          <img
-            src="assets/Logo.png"
-            alt="SlayFootball"
-            title="SlayFootball"
-            style="width: 80px"
-          />
+          <img src="assets/Logo.png" alt="SlayFootball" title="SlayFootball" style="width: 80px" />
         </div>
         <div>
           <div class="navbar-nav px-3">
-            <a
-              class="nav-link active link-primary fw-bold px-3"
-              href="./index.html"
-              >Event & Tickets</a
-            >
+            <a class="nav-link active link-primary fw-bold px-3" href="./index.html">Event & Tickets</a>
             <a class="nav-link px-3" href="./contact.html">Contact</a>
             <button type="button" class="btn btn-success">
               <span id="iconText" class="d-none d-sm-inline">Login</span>
@@ -41,13 +34,11 @@
                 height="25"
                 fill="currentColor"
                 class="bi bi-person-circle"
-                viewBox="0 0 16 16"
-              >
+                viewBox="0 0 16 16">
                 <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
                 <path
                   fill-rule="evenodd"
-                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"
-                />
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
               </svg>
             </button>
           </div>
@@ -59,35 +50,22 @@
       <h2>Login</h2>
       <form>
         <div class="mb-3">
-          <label for="username" class="form-label">Username</label>
-          <input
-            type="text"
-            class="form-control"
-            id="username"
-            placeholder="Enter your username"
-            required
-          />
+          <label for="username" class="form-label">Username:</label>
+          <input type="text" class="form-control" id="username" placeholder="Enter your username" required />
         </div>
 
         <div class="mb-3">
           <label for="password" class="form-label">Password:</label>
-          <input
-            type="password"
-            class="form-control"
-            id="password"
-            placeholder="Enter new password"
-          />
+          <input type="password" class="form-control" id="password" placeholder="Enter new password" required />
         </div>
         <div class="d-flex gap-3">
-          <button type="" class="btn btn-primary">Login</button>
+          <button type="button" class="btn btn-primary" id="loginButton">Login</button>
           <a href="./auth-register.html" class="btn btn-warning">Register</a>
           <a href="./index.html" class="btn btn-secondary">Back to Home</a>
         </div>
       </form>
     </div>
 
-    <footer class="bg-dark text-white text-center fixed-bottom">
-      ©Slay Football - EIE4432 Group Project
-    </footer>
+    <footer class="bg-dark text-white text-center fixed-bottom">©Slay Football - EIE4432 Group Project</footer>
   </body>
 </html>
