--- a/static/index.html
+++ b/static/index.html
@@ -35,7 +35,7 @@
     <nav class="navbar navbar-expand bg-body-tertiary justify-content-between align-items-center">
         <div class="container">
             <div class="px-3">
-                <img src="assets/Logo.png" alt="SlayFootball" title="SlayFootball" style="width: 80px" />
+                <img src="./assets/Logo.png" alt="SlayFootball" title="SlayFootball" style="width: 80px" />
             </div>
             <div>
                 <div class="navbar-nav px-3">
@@ -76,7 +76,7 @@
             </div>
 
             <div class="col-md-8 col-lg-9 d-none d-md-flex justify-content-center">
-              <img src="assets/football.png" alt="SlayFootball" title="SlayFootball" class="img-fluid"  />
+              <img src="./assets/football.png" alt="SlayFootball" title="SlayFootball" class="img-fluid"  />
             </div>
                 
 
