--- a/static/auth-register.html
+++ b/static/auth-register.html
@@ -9,6 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous" />
     <title>User Profile</title>
+    <script src="./js/register.js"></script>
   </head>
 
   <body class="bg-body-tertiary">
@@ -103,7 +104,7 @@
         </div>
         <div class="d-flex gap-3">
           <button type="button" class="btn btn-primary"
-            id="registerButton">Register</button>
+            id="registerButton" onclick="addEventListener()" >Register</button>
           <a href="./index.html" class="btn btn-secondary">Back to Home</a>
         </div>
       </form>
@@ -114,3 +115,5 @@
     </footer>
 
   </html>
+
+  
