--- a/static/admin-addEvent.html
+++ b/static/admin-addEvent.html
@@ -41,7 +41,7 @@
     <div class="container">
       <h2 class="text-center mb-4">Add Event</h2>
 
-      <form>
+      <form id="addEventForm">
         <div class="row">
           <div class="col-8">
             <div class="mb-3">
@@ -82,6 +82,7 @@
     </div>
 
     <footer class="bg-dark text-white text-center fixed-bottom">©Slay Football - EIE4432 Group Project</footer>
+    <script src="js/admin-addEvent.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
