--- a/static/admin-eventManagement.html
+++ b/static/admin-eventManagement.html
@@ -58,41 +58,7 @@
 
         <div id="adminEventList" class="list-group">
           <div class="list-group" id="eventList">
-            <div class="list-group-item stadium-A">
-              <div class="row align-items-center">
-                <div class="col-md-8">
-                  <h5 class="mb-1">
-                    SK Slovan Bratislava vs GNK Dinamo Zagreb
-                  </h5>
-                  <p class="mb-1">Date: 2024-11-15</p>
-                  <p class="mb-1">Stadium: Tehelné Pole Football Stadium</p>
-                </div>
-                <div class="col-md-4">
-                  <img
-                    src="assets/football match1.png"
-                    alt="match1"
-                    class="img-fluid rounded-4"
-                  />
-                </div>
-              </div>
-            </div>
-
-            <div class="list-group-item stadium-B">
-              <div class="row align-items-center">
-                <div class="col-md-8">
-                  <h5 class="mb-1">Match 2: Team C vs Team D</h5>
-                  <p class="mb-1">Date: 2024-11-20</p>
-                  <p class="mb-1">Stadium: Stadium B</p>
-                </div>
-                <div class="col-md-4">
-                  <img
-                    src="assets/football match1.png"
-                    alt="match12"
-                    class="img-fluid rounded-4"
-                  />
-                </div>
-              </div>
-            </div>
+            <!-- Events will be dynamically inserted here -->
           </div>
         </div>
       </div>
@@ -101,6 +67,7 @@
     <footer class="bg-dark text-white text-center fixed-bottom">
       ©Slay Football - EIE4432 Group Project
     </footer>
+    <script src="js/admin-eventManagement.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
