--- a/static/admin-seatManagement.html
+++ b/static/admin-seatManagement.html
@@ -7,10 +7,9 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
     <title>Seat Management</title>
-    <script src="./scripts/admin-sitemap.js"></script>
+    <script src="./js/admin-sitemap.js"></script>
     <style>
       .available {
         fill: rgb(73, 80, 73); /
@@ -35,8 +34,7 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -54,49 +52,34 @@
 
     <div class="container">
       <h2 class="text-center mb-4">Venue Seat Management</h2>
+
       <div class="row">
         <div class="col-6">
           <div>
-            <h5 class="mt-3">Select Venu</h5>
-            <select class="form-select mb-3" id="ticket-type">
+            <div class="d-flex align-items-center justify-content-between">
+              <h5 class="mt-3">Select Venue</h5>
+              <a href="./admin-addVenue.html" class="btn btn-outline-secondary">Add Venue +</a>
+            </div>
+
+            <select class="form-select mb-3" id="selected-venue">
               <option value="default" selected>---Please Select---</option>
-              <option value="StadiumA">Stadium A</option>
-              <option value="StadiumB">Stadium B</option>
+              <!-- <option value="StadiumA">Stadium A</option> -->
+              <!-- <option value="StadiumB">Stadium B</option> -->
             </select>
-          </div>
-          <div class="d-flex align-items-center">
-            <h5 class="mt-3">Add Venue</h5>
-            <button
-              class="btn btn-outline-secondary mx-3"
-              type="button"
-              id="button-plus"
-            >
-              +
-            </button>
+            <div class="mt-2">
+              <button class="btn btn-primary btn-sm" id="editVenueButton">Edit</button>
+              <button class="btn btn-danger btn-sm" id="deleteVenueButton">Delete</button>
+            </div>
           </div>
         </div>
         <div class="col-6">
-          <img
-            src="assets/CourtMap.png"
-            alt="courtMap"
-            class="img-fluid"
-            style="max-width: 500px; width: 70%"
-          />
+          <img src="assets/CourtMap.png" alt="courtMap" class="img-fluid" style="max-width: 500px; width: 70%" />
         </div>
       </div>
-      <h4 class="bg-success p-3 my-3 text-center text-white">
-        <span>Statium A</span> areas
-      </h4>
+      <h4 class="bg-success p-3 my-3 text-center text-white"><span id="stadium-text">Statium</span> areas</h4>
       <div id="adminSeatMap" class="row justify-content-center"></div>
     </div>
 
-    <footer class="bg-dark text-white text-center fixed-bottom">
-      ©Slay Football - EIE4432 Group Project
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <footer class="bg-dark text-white text-center fixed-bottom">©Slay Football - EIE4432 Group Project</footer>
   </body>
 </html>
