--- a/static/admin-userManagement.html
+++ b/static/admin-userManagement.html
@@ -7,8 +7,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous" />
+    <script src="./js/admin-userManagement.js"></script>
     <title>User Management</title>
   </head>
 
@@ -23,8 +23,7 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
@@ -42,16 +41,13 @@
 
     <div class="container">
       <h2 class="text-center mb-4">Users</h2>
-      <p>Import and map information of users from database</p>
+      <div class="row justify-content-center" id="userContainer"></div>
     </div>
 
-    <footer class="bg-dark text-white text-center fixed-bottom">
-      ©Slay Football - EIE4432 Group Project
-    </footer>
+    <footer class="bg-dark text-white text-center fixed-bottom">©Slay Football - EIE4432 Group Project</footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous"></script>
   </body>
 </html>
