attempt to change venue list to dynamic

--- a/static/admin-seatManagement.html
+++ b/static/admin-seatManagement.html
@@ -63,8 +63,8 @@
 
             <select class="form-select mb-3" id="selected-venue">
               <option value="default" selected>---Please Select---</option>
-              <!-- <option value="StadiumA">Stadium A</option> -->
-              <!-- <option value="StadiumB">Stadium B</option> -->
+              <!-- <option value="StadiumA">Stadium A</option>
+              <option value="StadiumB">Stadium B</option> -->
             </select>
             <div class="mt-2">
               <button class="btn btn-primary btn-sm" id="editVenueButton">Edit</button>
