purchase ticket process

--- a/static/admin-addEvent.html
+++ b/static/admin-addEvent.html
@@ -69,8 +69,8 @@
           <label for="venue" class="form-label">Venue:</label>
           <select class="form-select mb-3" id="venue" required>
             <option value="default" selected>---Please Select---</option>
-            <option value="StadiumA">Stadium A</option>
-            <option value="StadiumB">Stadium B</option>
+            <!-- <option value="StadiumA">Stadium A</option>
+            <option value="StadiumB">Stadium B</option> -->
           </select>
         </div>
         <div class="d-flex gap-3">
